--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -20,7 +20,8 @@
     font-size: 2.5em;
     line-height: 56px;
     font-weight: 700;
-    color: #00497F;
+    color:white;
+    text-shadow: #00497F -1px 1px 2px;
 }
 
 .header nav {
