--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -8,6 +8,9 @@
     bottom:0;
 	min-height: calc(100% - 56px);
 	width: 100vw;
+    min-width:320px;
+    margin:0;
+    padding:0;
     display: flex;
     justify-content: center;
     align-items: center;
