--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -8,20 +8,19 @@
     width: 100%;
     height: 56px;
     padding: 0;
-    background: #F3C730;
+    background-color:white;
+    border-bottom:3px solid #F58200;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     z-index: 50;
 }
 
 .header h1 {
-    /*float: left;*/
     margin: 0;
     padding: 0 15px;
     font-size: 2.5em;
     line-height: 56px;
     font-weight: 700;
-    color:white;
-    text-shadow: #00497F -1px 1px 2px;
+    color:#00497F;
 }
 
 .header nav {
